# COSMOS

./: LICENSE  Makefile  README.md  cosmos_demo.html  index.html  pyproject.toml  requirements.txt  run_all.py
src/cosmos/: __init__.py  chomp_cw.py  chomp_single_agent.py  chomp_swarm.py  cli.py  cosmos_full.py  cosmos_generality.py  cosmos_joint.py  cosmos_optimal.py  cosmos_safe.py  cosmos_sweep.py  cosmos_units.py  cosmos_validation.py  cw_vs_j2_demo.py  orbital_sim.py  pygame_orbital_sim.py
tests/: test_cosmos.py
